--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Mój unikalny tytuł strony</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
