--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <ul class="nav">
     <ul>
         <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Blog</a>
@@ -20,7 +20,7 @@
             <a class="nav-link" href="#">Quiz</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Kontakt</a>
+            <a class="nav-link" href="contact.html">Kontakt</a>
         </li>
 
     </ul>
