--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul class="nav">
         <ul>
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Blog</a>
