--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,10 @@
         <button type="submit" class="btn btn-primary">Wyślij</button>
 
     </form>
+
 </div>
+<footer>Copyrights © Mateusz Niziołek | 2019 </footer>
+
 
 
 
