--- a/index.html
+++ b/index.html
@@ -32,18 +32,20 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-9">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Morbi purus velit, posuere vitae magna sit amet, dictum semper sem. Aenean eu nibh nulla.
-                In ullamcorper augue lobortis erat pretium vulputate. Nullam commodo ex malesuada facilisis imperdiet.
-                Proin ac ornare mi. Proin sed nulla ac metus laoreet maximus.
-                Phasellus tellus mi, commodo non rhoncus id, dignissim sit amet orci.
-                Integer sodales sapien eget consectetur placerat. Integer non dictum ante, eu sodales magna.
-                Morbi cursus, ex ut fermentum consequat, velit urna ullamcorper diam, non vehicula arcu nibh id ligula.
-                Nullam feugiat interdum nibh ut pharetra. Praesent euismod ipsum semper nibh sodales tristique.
-                Vestibulum commodo arcu massa, et condimentum tortor tempus tempus.
-                Vivamus bibendum ex a elit placerat gravida. Aenean euismod massa nisl, at ultrices enim semper a.
-                Nam porta, ipsum ac viverra fringilla, odio tortor efficitur sem, ac varius metus diam eu metus.
-                Aenean ullamcorper id libero suscipit vestibulum. Suspendisse pretium sem massa, a mattis lacus elementum eu.
+                <span>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Morbi purus velit, posuere vitae magna sit amet, dictum semper sem. Aenean eu nibh nulla.
+                    In ullamcorper augue lobortis erat pretium vulputate. Nullam commodo ex malesuada facilisis imperdiet.
+                    Proin ac ornare mi. Proin sed nulla ac metus laoreet maximus.
+                    Phasellus tellus mi, commodo non rhoncus id, dignissim sit amet orci.
+                    Integer sodales sapien eget consectetur placerat. Integer non dictum ante, eu sodales magna.
+                    Morbi cursus, ex ut fermentum consequat, velit urna ullamcorper diam, non vehicula arcu nibh id ligula.
+                    Nullam feugiat interdum nibh ut pharetra. Praesent euismod ipsum semper nibh sodales tristique.
+                    Vestibulum commodo arcu massa, et condimentum tortor tempus tempus.
+                    Vivamus bibendum ex a elit placerat gravida. Aenean euismod massa nisl, at ultrices enim semper a.
+                    Nam porta, ipsum ac viverra fringilla, odio tortor efficitur sem, ac varius metus diam eu metus.
+                    Aenean ullamcorper id libero suscipit vestibulum. Suspendisse pretium sem massa, a mattis lacus elementum eu.
+                </span>
             </div>
             <div class="col-sm-12 col-md-3">
                 <div id="socialLinks">
@@ -54,8 +56,10 @@
                 </div>
             </div>
         </div>
+
     </div>
 
+    <footer>Copyrights © Mateusz Niziołek | 2019 </footer>
 
 
 
@@ -64,9 +68,6 @@
 
 
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
