--- a/index.html
+++ b/index.html
@@ -10,24 +10,9 @@
 </head>
 <body>
 
-    <ul class="nav">
-        <ul>
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Quiz</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Kontakt</a>
-            </li>
+    <div class="navbar justify-content-center">
 
-        </ul>
-
-    </ul>
+    </div>
 
     <div class="container">
         <div class="row">
@@ -68,6 +53,7 @@
 
 
 
+    <script src="navbar.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
