--- a/contact.html
+++ b/contact.html
@@ -8,76 +8,62 @@
 </head>
 <body>
 
-<ul class="nav">
-    <ul>
-        <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Quiz</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="contact.html">Kontakt</a>
-        </li>
 
-    </ul>
+    <div class="navbar justify-content-center">
 
-</ul>
+    </div>
 
-<div class="container" >
 
-    <form>
-        <div class="form-group">
-            <label for="firstName">Imię</label>
-            <input class="form-control" id="firstName" placeholder="Imię">
-        </div>
-        <div class="form-group">
-            <label for="lastName">Nazwisko:</label>
-            <input class="form-control" id="lastName" placeholder="Nazwisko">
-        </div>
-        <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Email">
-        </div>
-        <div class="form-group">
-            <div class="custom-control custom-radio">
-                <input type="radio" id="male" name="male" class="custom-control-input">
-                <label class="custom-control-label" for="male">Mężczyzna</label>
+
+    <div class="container" >
+
+        <form>
+            <div class="form-group">
+                <label for="firstName">Imię</label>
+                <input class="form-control" id="firstName" placeholder="Imię">
             </div>
-            <div class="custom-control custom-radio">
-                <input type="radio" id="female" name="female" class="custom-control-input">
-                <label class="custom-control-label" for="female">Kobieta</label>
+            <div class="form-group">
+                <label for="lastName">Nazwisko:</label>
+                <input class="form-control" id="lastName" placeholder="Nazwisko">
             </div>
-        </div>
-        <div class="form-group">
-            <label for="description">Opis:</label>
-            <textarea id="description" rows="4" cols="50" class="form-control"></textarea>
-        </div>
-        <div class="form-group">
-            <label for="age">Wiek</label>
-            <input type="number" class="form-control" id="age" value="18">
-        </div>
-        <div class="form-group">
-            <label for="maritalStatus">Stan cywilny:</label>
-            <select id="maritalStatus" class="form-control">
-                <option value="KawalerPannna">Kawaler, Pannna</option>
-                <option value="ZonatyMezatka">Zonaty, Mężatka</option>
-                <option value="RozwiedzionyRozwiedziona">Rozwiedziony, Rozwiedziona</option>
-                <option value="WdowiecWdowa">Wdowiec, Wdowa</option>
-            </select>
-        </div>
-        <button type="clear" class="btn btn-danger">Wyczyść</button>
-        <button type="submit" class="btn btn-primary">Wyślij</button>
+            <div class="form-group">
+                <label for="email">Email address</label>
+                <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Email">
+            </div>
+            <div class="form-group">
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="male" name="male" class="custom-control-input">
+                    <label class="custom-control-label" for="male">Mężczyzna</label>
+                </div>
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="female" name="female" class="custom-control-input">
+                    <label class="custom-control-label" for="female">Kobieta</label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="description">Opis:</label>
+                <textarea id="description" rows="4" cols="50" class="form-control"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="age">Wiek</label>
+                <input type="number" class="form-control" id="age" value="18">
+            </div>
+            <div class="form-group">
+                <label for="maritalStatus">Stan cywilny:</label>
+                <select id="maritalStatus" class="form-control">
+                    <option value="KawalerPannna">Kawaler, Pannna</option>
+                    <option value="ZonatyMezatka">Zonaty, Mężatka</option>
+                    <option value="RozwiedzionyRozwiedziona">Rozwiedziony, Rozwiedziona</option>
+                    <option value="WdowiecWdowa">Wdowiec, Wdowa</option>
+                </select>
+            </div>
+            <button type="clear" class="btn btn-danger">Wyczyść</button>
+            <button type="submit" class="btn btn-primary">Wyślij</button>
 
-    </form>
+        </form>
 
-</div>
-<footer>Copyrights © Mateusz Niziołek | 2019 </footer>
-
-
+    </div>
+    <footer>Copyrights © Mateusz Niziołek | 2019 </footer>
 
 
 
@@ -88,7 +74,7 @@
 
 
 
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="navbar.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 </html>
