--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
             </div>
         </div>
 
+        <div class="scroll">
+            <button class="btn btn-success">
+                <i class="fa fa-arrow-circle-up" aria-hidden="true"></i>Do góry
+            </button>
+        </div>
+
+
+
     </div>
 
     <footer>Copyrights © Mateusz Niziołek | 2019 </footer>
@@ -54,6 +62,7 @@
 
 
     <script src="js/navbar.js"></script>
+    <script src="js/scroll.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
