--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <title>Mój unikalny tytuł strony</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 <body>
 
@@ -62,6 +63,14 @@
 
         </form>
 
+        <div class="scroll">
+            <button class="btn btn-success">
+                <i class="fa fa-arrow-circle-up" aria-hidden="true"></i>Do góry
+            </button>
+        </div>
+
+
+
     </div>
     <footer>Copyrights © Mateusz Niziołek | 2019 </footer>
 
@@ -75,6 +84,7 @@
 
 
     <script src="js/navbar.js"></script>
+    <script src="js/scroll.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 </html>
