--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 <body>
 
-    <div class="navbar justify-content-center">
-
-    </div>
+    <div class="navbar justify-content-center"></div>
 
     <div class="container">
         <div class="row">
@@ -47,8 +45,6 @@
                 <i class="fa fa-arrow-circle-up" aria-hidden="true"></i>Do góry
             </button>
         </div>
-
-
 
     </div>
 
